# raseed

./: .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  .secrets.baseline  CLAUDE.md  COMMANDS.md  README.md  SECURITY.md  docker-compose.yml  eval_thresholds.yaml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_auth_tenancy.py  0003_ingestion_analytics.py  0004_agent_rag.py  0005_lifecycle_ops.py  0006_security_hardening.py  0007_user_profile_fields.py
backend/app/: __init__.py
backend/app/api/: __init__.py  analytics.py  auth.py  chat.py  deps.py  erasure.py  goals.py  health.py  ingestion.py  ops.py  review.py  settings.py
backend/app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logging.py  observability.py  request_context.py
backend/app/db/: session.py
backend/app/domain/: __init__.py  analytics.py  audit.py  base.py  correction.py  drift_signal.py  erasure_audit.py  goal.py  knowledge.py  memory.py  model_registry.py  retrain_run.py  transaction.py  user.py  user_settings.py
backend/app/infra/: __init__.py  db.py  embeddings.py  llm.py  minio.py  modelserver_client.py  queue.py  redis.py  vault.py
backend/app/repositories/: __init__.py  analytics_repo.py  base.py  corrections_repo.py  drift_repo.py  goals_repo.py  knowledge_repo.py  memory_repo.py  model_registry_repo.py  retrain_runs_repo.py  transactions_repo.py
backend/app/schemas/: chat.py  erasure.py  goal.py  ingestion.py  ops.py  review.py  user.py
backend/app/services/: __init__.py  analytics.py  erasure.py  ingestion.py  parsing.py  rules.py  session_memory.py  user_service.py
backend/app/services/agent/: loop.py  rails.py  ratelimit.py  router.py
backend/app/services/agent/tools/: __init__.py  analysis.py  goals.py  knowledge.py  memory.py  reads.py  registry.py  writes.py
backend/app/services/lifecycle/: gate.py  promote.py  trigger.py
backend/app/services/rag/: chunking.py  ingest.py  retrieval.py
backend/app/services/review/: queue.py  relabel.py
backend/app/workers/: __init__.py  drift.py  slack_webhook.py  stats.py  worker.py
backend/prompts/: .gitkeep  agent_system.txt  no_answer.txt  query_rewrite.txt  synthesis.txt
backend/scripts/: create_drift_fixture.py  ingest_corpus.py  simulate_drift.py
backend/tests/: __init__.py  test_analytics.py  test_compose_smoke.py  test_drift_gate.py  test_forecaster_gate.py  test_ingestion.py  test_parsing.py  test_rag_gate.py  test_redteam_gate.py  test_secret_scan_gate.py  test_tool_selection_gate.py
backend/tests/fixtures/: drift_skewed_batch.parquet  redteam_probes.json
backend/tests/golden/: .gitkeep
backend/tests/golden/forecasting/: README.md  expected_horizon.parquet  generate_fixture.py  history.parquet
backend/tests/golden/rag/: triples.yaml
backend/tests/golden/tool_selection/: cases.yaml
backend/tests/integration/: conftest.py  test_affordability.py  test_auth.py  test_chat_enumerable.py  test_chat_isolation.py  test_goals_memory.py  test_no_raw_bytes_persist.py  test_operator_access.py  test_promote_reload.py  test_rls_isolation.py  test_rls_isolation_phase3.py  test_rls_reset.py  test_rls_roles.py
backend/tests/redteam/: .gitkeep
backend/tests/unit/: test_agent_loop.py  test_app_boot.py  test_drift_signals.py  test_erasure.py  test_gate.py  test_llm_adapter.py  test_memory_audit.py  test_rag_retrieval.py  test_rails.py  test_relabel_quarantine.py  test_retrain_trigger.py  test_review_queue.py  test_router.py  test_settings.py  test_single_model_gateway.py  test_slack_payload.py  test_tools_rls.py  test_write_tools.py
backend/workers/: __init__.py  recompute.py  relabel.py  stats.py
briefs/: constitution.md  phase-0-skeleton.md  phase-1-foundation.md  phase-2-categorizer.md  phase-3-ingestion-analytics.md  phase-3b-dashboard-ui.md  phase-4-agent-rag.md  phase-5-lifecycle.md  phase-6-security.md  phase-7-release.md
docs/: DECISIONS.md  DESIGN.md  EVALS.md  PLAN.md  RUNBOOK.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
modelserver/: .dockerignore  Dockerfile  app.py  categorizer.py  config.py  logging.py  pyproject.toml  schemas.py
modelserver/artifacts/: categorizer.onnx  model_card.md
modelserver/tests/: conftest.py  test_lean_image.py  test_predict.py  test_refuse_to_boot.py  test_validation.py
prompts/: categorizer_zeroshot.md
rag-corpus/: .gitkeep  SOURCES.md  apr-vs-apy.md  avoiding-fraud-and-scams.md  bank-accounts-and-overdraft-fees.md  budgeting-and-tracking-spending.md  budgeting-basics.md  building-emergency-savings.md  building-savings.md  credit-cards-and-interest.md  credit-reports-and-scores.md  dealing-with-debt-collectors.md  emergency-funds.md  investing-basics.md  paying-down-debt.md  understanding-credit.md
scripts/: .gitkeep  README.md  make_operator.py  seed_demo.py  smoke_compose.sh
specs/001-repo-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dashboard-ui/: plan.md  (+5 more)
trainer/: Dockerfile  pyproject.toml  train.py
training/: README.md  eval_zeroshot.py  export_onnx.py  gate_holdout.py  prepare_dataset.py  requirements.txt  taxonomy.yaml  train_baseline.py  train_champion_local.py
(+119 files in other folders)
