# Backend package metadata, dependency declarations, and lint/type-check config.
# Single source for ruff + mypy settings so CI and local runs agree (Art. V).
[project]
name = "raseed-backend"
version = "0.0.0"
description = "Raseed FastAPI async layered backend (Phase 0 skeleton)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "rq>=1.16",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",
    "fastapi-users[sqlalchemy]>=13.0",
    "hvac>=2.1",
    "google-genai>=0.8",
    "prophet>=1.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 disabled: single-line file-responsibility headers are mandated (FR-002) and
# intentionally long; line length is a formatter concern, not correctness.
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in arg defaults is the intended pattern

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
# Alembic migrations + env.py: the local `alembic/` dir shadows the installed
# `alembic` package; migration scripts are not type-checked by convention.
exclude = ["^alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
