# Model-server deps: deliberately lean. onnxruntime + numpy for inference, FastAPI
# to serve. NO torch / transformers in any serving image (constitution Art. III).
[project]
name = "raseed-modelserver"
version = "0.0.0"
description = "Lean ONNX model server (Phase 0 stub: no model loaded)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "onnxruntime>=1.18",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E501 disabled: single-line file-responsibility headers are intentionally long.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
