# Model-server deps: deliberately lean. onnxruntime + numpy for inference, FastAPI
# to serve. NO torch / transformers in any serving image (constitution Art. III).
[project]
name = "raseed-modelserver"
version = "0.0.0"
description = "Lean ONNX model server (Phase 0 stub: no model loaded)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "tokenizers>=0.19",
    "structlog>=24.0",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "onnx>=1.16",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E501 disabled: single-line file-responsibility headers are intentionally long.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# yaml/pyyaml ships no stubs in this env; ignore_missing_imports doesn't cover the
# separate "import-untyped" code, so silence it explicitly (PyYAML is well-typed at runtime).
disable_error_code = ["import-untyped"]
